Task 003 - spring version of Task-002
- added Spring dependencies
- ArraySorter is now a Spring @Component
- tests are run with Spring JUnit runner

--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,6 @@
     <modules>
         <module>task-001</module>
         <module>task-002</module>
+        <module>task-003</module>
     </modules>
 </project>
